@@ -18,7 +18,7 @@ from .converter import Converter
 from .reify import reify
 from .run import run
 from reg import implicit
-from pdb import Pdb
-pdb = Pdb(skip=['reg.*', 'inspect', 'repoze.lru'])
+
+
 implicit.initialize(None)
 enable_implicit()
